 * Use lens instead of uniplate, replace some boilerplate with lens
 * Improve test framework to handle windows interactions, e.g. scrolling.
 * Use GHC.Generics instead of derive on GHC 7.8
 * Remove bitrotten ghcapi and scion flags.
 * Support non-qwerty vim users
 * Support eventlog profiling with -feventlog
 * Eliminate idle CPU consumption in vty frontend
 * General cleanup

0.9.0
-----

 * Vim keymap removed. Vim2 is now called Vim.

0.8.1
-----

 * Fix accepted lens version range.

0.8.0
-----

 * This release works with GHC 7.8.1.
 * And doesn't work with GHC 7.4.
 * Lens is now used instead of data-accessor. Migration was mostly mechanical,
   patches for more idiomatic lens usage are welcome.
 * Yi.Prelude was getting complaints over the years so it's now gone.
 * Commandline flag for choosing config directory now works.
 * Vte and Cocoa (issue #481) frontends that were abandoned for years are removed.
   If you want to revive these or make new frontends (Qt, EFL, SDL,
   threepenny-gui, etc), patches are welcome!
 * Test files no longer make case sensitive filesystems mad (issue #458).
 * Yi no longer eats (20 x filesize) memory when opening a file.
 * Other bugfixes and usability tweaks here and there.

Emacs-specific changes:

 * Dynamic reconfiguring yi with "M-x reload" now works (issue #515).
 * Cancel incremental search on cursor movement/return (issue #499).
 * Remove binding to cabal configure from emacs keymap (issue #522).
 * Bind M-{ and M-} to jump between paragraphs (issue #106).
 * Prompt the user for comment style when it's missing (issue #413).

Vim2-specific changes:

 * C-n completion now uses words from all open buffer instead of just current one.
 * Introduced :buffer, :buffers and :bdelete commands and C-^ and C-6 normal mode bindings.
 * Meta modifier is now available for use in Vim2 bindings.
 * :s(ubstitute) now works with delimiters other than '/' (issue #461).
 * Introduced :cabal command.
 * More tests.

0.7.2
-----
